@@ -196,15 +196,15 @@ Subsetting only affects the interactions, i.e., the anchor indices, not the regi
 identical(regions(gi), regions(sub.gi))
 ```
 
-Objects can also be concatenated using `rbind` or `c`. 
+Objects can also be concatenated using  `c`. 
 This forms a new `GInteractions` object that contains all of the interactions in the constituent objects.
 Both methods will also work on objects with different sets of common regions, with the final common set of regions being formed from a union of the constituent sets.
 
 ```{r}
-rbind(gi, sub.gi)
+c(gi, sub.gi)
 new.gi <- gi
 regions(new.gi) <- resize(regions(new.gi), width=20)
-rbind(gi, new.gi)
+c(gi, new.gi)
 ```
 
 ## Sorting, duplication and matching
@@ -248,7 +248,7 @@ In the example below, all of the repeated entries in `doubled` are marked as dup
 The `unique` method returns a `GInteractions` object where all duplicated entries are removed.
 
 ```{r}
-doubled <- rbind(combined, combined)
+doubled <- c(combined, combined)
 duplicated(doubled)
 ```
 
@@ -520,8 +520,14 @@ iset[1:3,]
 iset[,1:2]
 ```
 
-`InteractionSet` objects can be combined row-wise using `rbind` or `c`, similar to the methods described for `GInteractions`.
+`InteractionSet` objects can be combined row-wise using `rbind`.
 This forms a new `InteractionSet` object containing all interactions from each individual object, with the associated data across all samples.
+For example, the example below forms a new object with an extra copy of the first interaction:
+
+```{r}
+rbind(iset, iset[1,])
+```
+
 Objects with the same interactions can also be combined column-wise with the `cbind` method.
 This is typically used to combine data for the same interactions but from different samples.
 The example below forms an `InteractionSet` object with an extra copy of the data from sample 3:
